[tool.poetry]
name = "woodpecker"
version = "0.1.0"
description = ""
authors = ["TaopaiC <124380+TaopaiC@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
